--- a/P1.ipynb
+++ b/P1.ipynb
@@ -263,7 +263,7 @@
     "    \n",
     "    \n",
     "    left_line = np.concatenate((left_input,left_prediction),axis=1) \n",
-    "    #print(left_line)\n",
+    "    \n",
     "    \n",
     "    left_line_filtered = []\n",
     "    for i in range(left_input.shape[0]):\n",
@@ -746,11 +746,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 871,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] >>>> Building video test_videos_output/challenge.mp4\n",
+      "[MoviePy] Writing video test_videos_output/challenge.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 251/251 [00:06<00:00, 41.51it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: test_videos_output/challenge.mp4 \n",
+      "\n",
+      "CPU times: user 5.74 s, sys: 450 ms, total: 6.19 s\n",
+      "Wall time: 6.81 s\n"
+     ]
+    }
+   ],
    "source": [
     "challenge_output = 'test_videos_output/challenge.mp4'\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
@@ -765,11 +790,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 872,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"test_videos_output/challenge.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 872,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
